--- a/P004606.opf/meta.yml
+++ b/P004606.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG25903
   title: དབྱི་སོའི་གཏམ་རྒྱུད།
   author: ''
-  volumes: {}
+  volumes:
+    414bbf933f3d4c3cba7223a5c51b1120:
+      image_group_id: I1KG25905
+      title: ''
+      volume_number: 1
+      total_pages: 263
