--- a/P004606.opf/layers/v001/Pagination.yml
+++ b/P004606.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: ece14fec16d7484ab5b3389d75682672
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   e60fd953b1ca461dbaa63690ceb13f64:
