--- a/P004606.opf/meta.yml
+++ b/P004606.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P004606
 initial_creation_type: ocr
+created_at: 31/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG25903
   title: དབྱི་སོའི་གཏམ་རྒྱུད།
