--- a/P004606.opf/meta.yml
+++ b/P004606.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P004606
 initial_creation_type: ocr
 created_at: 31/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 11:44:03.727972
 source_metadata:
   id: bdr:W1KG25903
   title: དབྱི་སོའི་གཏམ་རྒྱུད།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 263
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: false
